# ChangeLog for app-text/iso-codes
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/iso-codes/ChangeLog,v 1.75 2009/07/04 18:33:08 ranger Exp $

  04 Jul 2009; Brent Baude <ranger@gentoo.org> iso-codes-3.8.ebuild:
  Marking iso-codes-3.8 ppc64 for bug 272502

  11 Jun 2009; Markus Meier <maekke@gentoo.org> iso-codes-3.8.ebuild:
  amd64 stable, bug #272502

  11 Jun 2009; Jeroen Roovers <jer@gentoo.org> iso-codes-3.8.ebuild:
  Stable for HPPA (bug #272502).

  06 Jun 2009; nixnut <nixnut@gentoo.org> iso-codes-3.8.ebuild:
  ppc stable #272502

  04 Jun 2009; Raúl Porcel <armin76@gentoo.org> iso-codes-3.8.ebuild:
  alpha/arm/ia64/sh/x86 stable wrt #272502

  03 Jun 2009; Ferris McCormick <fmccor@gentoo.org> iso-codes-3.8.ebuild:
  Sparc stable, Bug #272502.

*iso-codes-3.9 (03 Jun 2009)

  03 Jun 2009; Gilles Dartiguelongue <eva@gentoo.org> +iso-codes-3.9.ebuild:
  Version bump.

  13 Apr 2009; Raúl Porcel <armin76@gentoo.org> iso-codes-3.6.ebuild:
  arm/sh stable

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org> iso-codes-3.6.ebuild:
  Stable on sparc, bug #260063

*iso-codes-3.8 (10 Apr 2009)

  10 Apr 2009; Mart Raudsepp <leio@gentoo.org> -iso-codes-3.2.ebuild,
  -iso-codes-3.5.1.ebuild, +iso-codes-3.8.ebuild:
  Version bump. Remove pkgconfig file relocation - /usr/share/pkgconfig is
  the correct place for it as no binaries are installed. Clean out old.

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org> iso-codes-3.6.ebuild:
  alpha/ia64 stable wrt #260063

  15 Mar 2009; Markus Meier <maekke@gentoo.org> iso-codes-3.6.ebuild:
  x86 stable, bug #260063

  11 Mar 2009; Daniel Gryniewicz <dang@gentoo.org> iso-codes-3.6.ebuild:
  Marked stable on amd64

  06 Mar 2009; Brent Baude <ranger@gentoo.org> iso-codes-3.6.ebuild:
  Marking iso-codes-3.6 ppc stable for bug 260063

  05 Mar 2009; Brent Baude <ranger@gentoo.org> iso-codes-3.6.ebuild:
  Marking iso-codes-3.6 ppc64 stable for bug 260063
