@@ -1,10 +1,8 @@
-DIST iso-codes-3.3.tar.bz2 5177202 RMD160 0868f49557ef8d1216e69d70af589a645efe8513 SHA1 2f66b4e524fe4fc8bb9bac1bf2253fab8436034e SHA256 3bb9248963dc86e293cf2cb9b0092539c1606c9830c51ddc494297d8a5d5f41a
-DIST iso-codes-3.6.tar.bz2 5241654 RMD160 ce4b9596c8366f758b171c6e0475e642d02ddd9d SHA1 44bd5d5efd36e4c3c6157e1d8fa2448321dded4b SHA256 cee1c7d22f25d6f9ef3d2f36e7195ae311a7783b068b9e1d189330f1a37073b0
+DIST iso-codes-3.10.tar.bz2 5351303 RMD160 baca11224b8bcf241c59383400d937d3f115c1c3 SHA1 6eba71d4bb19ccd3f9c84cb11e0af708532d00ae SHA256 ae33db43ed7b325754f4887ff53adac1fb2978eae71aadeda511a4c1f9e71274
 DIST iso-codes-3.8.tar.bz2 5323027 RMD160 36ca00481e99c28e958ab85ece7cebfe3c332b51 SHA1 8a62219c7c5eafae0b65b58a61ec4a818fb178c3 SHA256 4cc4c3791f8f569af41b40835080b4b8b0c9305efd1ffebacebb576c518007a0
 DIST iso-codes-3.9.tar.bz2 5341785 RMD160 085b15e219597f0e16526d51badd7e53e238b5d5 SHA1 87eca521ce21170291fdf692daabe073ab745d82 SHA256 3d78bf6273c317d332ec5d35cb38214216fa2c3bb073626ae36f0b81aca0c158
-EBUILD iso-codes-3.3.ebuild 978 RMD160 52c4bcab1d2908e76e32b0fa63935910ed15a886 SHA1 3025d2949db06ed528e7e602b2faa6a6d5c2d880 SHA256 0535055d46ed15fe3c8b87444e13264518e065392e6553ef7b2d0c7c44e5acaa
-EBUILD iso-codes-3.6.ebuild 978 RMD160 d01951032bd5997f68962848ed2feb485e3dc28b SHA1 fa6016f6def2c6c4e52f09c21f02762a2af61eda SHA256 737aa3f9d6c5c430e5a2a404d7929c6562342858739f915abe13537958528048
+EBUILD iso-codes-3.10.ebuild 756 RMD160 4b4fea970a85b7688070c4531120367f2e6854a1 SHA1 90243547d008a6954e6bc13a358aeeea86206f09 SHA256 0ee0fa6bd651cbce6933f3f507a290bf847c6d99b14ea996be0420958d952e38
 EBUILD iso-codes-3.8.ebuild 758 RMD160 10a3e9bd57e41a662b04d397b9d69fe880c7a797 SHA1 6b6af6a9892c09ffaed16d5785f2985338304e85 SHA256 294fe79204fad348459177ffdba5aa07f777de13e6224fe1001e560e4712b1eb
 EBUILD iso-codes-3.9.ebuild 755 RMD160 4a1fdc76f09e8ec94a0657f04229c90a0371f895 SHA1 dc8689524bbe3b702e869617feadfcd521e3e38d SHA256 f302d1a0581c805c19553b46873858987944eece226730a7ebb893b34df6b749
-MISC ChangeLog 9712 RMD160 1778eceec2aaf876760b0bb724433a9598b4e59b SHA1 1e485951a3d4abbe8749fb07bf7824848de2c10a SHA256 d48eab3468069e03dd1d57197e75b033271520f5a05b3c1c0cb31f73f563c0a6
+MISC ChangeLog 9907 RMD160 d84f9ba85003aed813843511b82e4442deeebd29 SHA1 a8444d0365b407860fdc5555a3e095b3f02cbdee SHA256 08a268109cb66fd1054d58a063695a7893bd3f1db6b997717229726dbf1b048d
 MISC metadata.xml 387 RMD160 110fb26a8d959cfaa9ded0d5aaf4f3f26860eb66 SHA1 90b5f3b6d4b059b26db56f689f494a854b79f216 SHA256 d5252ca9dce95b72fa3153d212126bfa4594a1cf6868bff0dc205e46891a05e8
