@@ -1,10 +1,8 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/iso-codes/iso-codes-3.3.ebuild,v 1.7 2008/11/22 16:07:44 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/iso-codes/iso-codes-3.10.ebuild,v 1.1 2009/08/31 21:17:45 eva Exp $
 
-WANT_AUTOMAKE="latest"
-
-inherit eutils autotools
+EAPI=2
 
 DESCRIPTION="Provides the list of country and language names"
 HOMEPAGE="http://alioth.debian.org/projects/pkg-isocodes/"
@@ -17,21 +15,9 @@ IUSE=""
 
 RDEPEND=""
 DEPEND="sys-devel/gettext
-	>=dev-lang/python-2.3"
-
-src_unpack() {
-	unpack ${A}
-	cd "${S}"
-
-	# fix install location for multilib machines
-	sed -i -e 's:(datadir)/pkgconfig:(libdir)/pkgconfig:g' Makefile.am
-
-	eautomake
-}
-
-src_compile() {
-	econf || die "configure failed"
-}
+	|| (
+		>=dev-lang/python-2.3[-build,xml]
+		dev-python/pyxml )"
 
 src_install() {
 	emake DESTDIR="${D}" install || die "Installation failed"
