@@ -1,6 +1,12 @@
 # ChangeLog for app-text/iso-codes
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/iso-codes/ChangeLog,v 1.75 2009/07/04 18:33:08 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/iso-codes/ChangeLog,v 1.76 2009/08/31 21:17:45 eva Exp $
+
+*iso-codes-3.10 (31 Aug 2009)
+
+  31 Aug 2009; Gilles Dartiguelongue <eva@gentoo.org> -iso-codes-3.3.ebuild,
+  -iso-codes-3.6.ebuild, +iso-codes-3.10.ebuild:
+  Version bump. Clean up old revisions.
 
   04 Jul 2009; Brent Baude <ranger@gentoo.org> iso-codes-3.8.ebuild:
   Marking iso-codes-3.8 ppc64 for bug 272502
